# rocket-socket

./: Cargo.toml  thoughtboard.md
src/: main.rs
src/generator/: generator.rs
src/models/: channel_message.rs  client_configuration.rs  device.rs  mod.rs  server.rs  socket_message.rs
src/route/: static_files.rs
src/socket/: ws_rs.rs
