[package]
name = "dynamic_websocket_server"
version = "0.1.0"
authors = ["juicyarts <huess@juicyarts.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ws="0.9.0"
rocket="0.4.2"
serde = { version = "1.0", features = ["derive"] }
# serde_json is just for the example, not required in general
serde_json = "1.0"
